--- a/index.html
+++ b/index.html
@@ -3,42 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mein Web IPTV Player</title>
+    <title>Mein M3U IPTV Player</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #1a1a1a;
             color: white;
+            margin: 0;
+            display: flex;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        /* Layout: Links Player, Rechts Liste */
+        #main-content {
+            flex: 3;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            padding: 20px;
             justify-content: center;
-            height: 100vh;
-            margin: 0;
+            align-items: center;
         }
-        h1 { margin-bottom: 20px; }
-        #player-container {
-            width: 80%;
-            max-width: 800px;
+
+        #sidebar {
+            flex: 1;
+            background-color: #2a2a2a;
+            border-left: 1px solid #444;
+            display: flex;
+            flex-direction: column;
+            min-width: 250px;
+            max-width: 400px;
         }
+
+        /* Player Styles */
         video {
             width: 100%;
+            max-width: 900px;
             border-radius: 8px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.5);
             background-color: black;
         }
+
+        /* Controls Styles */
         .controls {
-            margin-top: 15px;
+            width: 100%;
+            max-width: 900px;
+            margin-top: 20px;
             display: flex;
             gap: 10px;
-            width: 100%;
         }
+
         input {
             flex-grow: 1;
             padding: 10px;
             border-radius: 4px;
             border: none;
         }
+
         button {
             padding: 10px 20px;
             background-color: #007bff;
@@ -49,45 +70,132 @@
             font-weight: bold;
         }
         button:hover { background-color: #0056b3; }
+
+        /* Senderliste Styles */
+        #channel-list {
+            flex-grow: 1;
+            overflow-y: auto; /* Scrollbar wenn Liste lang ist */
+            padding: 10px;
+        }
+
+        .channel-btn {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 5px;
+            background-color: #333;
+            color: #ddd;
+            border: none;
+            text-align: left;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        .channel-btn:hover { background-color: #444; }
+        .channel-header { padding: 15px; font-size: 1.2em; border-bottom: 1px solid #444; }
+
+        /* Mobile Anpassung */
+        @media (max-width: 768px) {
+            body { flex-direction: column; overflow: auto; height: auto; }
+            #sidebar { width: 100%; max-width: none; height: 400px; }
+        }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
 
-    <h1>Mein IPTV Player</h1>
-
-    <div id="player-container">
+    <div id="main-content">
+        <h1>M3U IPTV Player</h1>
         <video id="video" controls></video>
         
         <div class="controls">
-            <input type="text" id="streamUrl" placeholder="Füge hier deinen .m3u8 Link ein...">
-            <button onclick="loadStream()">Abspielen</button>
+            <input type="text" id="m3uUrl" placeholder="Füge hier deinen M3U Playlist Raw Link ein...">
+            <button onclick="loadPlaylist()">Liste laden</button>
+        </div>
+        <p style="font-size: 0.8em; color: #aaa;">Hinweis: Manche Links werden vom Anbieter blockiert (CORS).</p>
+    </div>
+
+    <div id="sidebar">
+        <div class="channel-header">Senderliste</div>
+        <div id="channel-list">
+            <div style="padding:10px; color: #888;">Noch keine Liste geladen.</div>
         </div>
     </div>
 
     <script>
-        // Die Logik zum Abspielen des Streams
-        function loadStream() {
-            var video = document.getElementById('video');
-            var url = document.getElementById('streamUrl').value;
+        var hls = null;
 
-            // Prüfen, ob HLS unterstützt wird (für Chrome, Firefox, Edge)
+        // 1. Funktion: Playlist herunterladen und verarbeiten
+        function loadPlaylist() {
+            var url = document.getElementById('m3uUrl').value;
+            var listContainer = document.getElementById('channel-list');
+            
+            listContainer.innerHTML = '<div style="padding:10px;">Lade...</div>';
+
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) throw new Error("Netzwerkfehler");
+                    return response.text();
+                })
+                .then(data => {
+                    parseM3U(data);
+                })
+                .catch(error => {
+                    console.error('Fehler:', error);
+                    listContainer.innerHTML = '<div style="padding:10px; color:red;">Fehler beim Laden. Möglicherweise blockiert der Anbieter den Zugriff (CORS) oder der Link ist falsch.</div>';
+                });
+        }
+
+        // 2. Funktion: Den Text der M3U Datei in Sender umwandeln
+        function parseM3U(data) {
+            var lines = data.split('\n');
+            var listContainer = document.getElementById('channel-list');
+            listContainer.innerHTML = ''; // Liste leeren
+
+            var currentLogo = "";
+            var currentTitle = "";
+
+            for (var i = 0; i < lines.length; i++) {
+                var line = lines[i].trim();
+
+                if (line.startsWith('#EXTINF:')) {
+                    // Versuche den Sendernamen zu finden (alles nach dem letzten Komma)
+                    var parts = line.split(',');
+                    currentTitle = parts[parts.length - 1];
+                } else if (line.startsWith('http')) {
+                    // Das ist der Link zum Stream
+                    createChannelButton(currentTitle, line);
+                }
+            }
+        }
+
+        // 3. Funktion: Button für einen Sender erstellen
+        function createChannelButton(name, url) {
+            var btn = document.createElement('button');
+            btn.className = 'channel-btn';
+            btn.innerText = name || "Unbenannter Sender";
+            btn.onclick = function() { playStream(url); };
+            document.getElementById('channel-list').appendChild(btn);
+        }
+
+        // 4. Funktion: Den ausgewählten Stream abspielen
+        function playStream(url) {
+            var video = document.getElementById('video');
+
             if (Hls.isSupported()) {
-                var hls = new Hls();
+                if (hls) {
+                    hls.destroy(); // Alten Stream beenden
+                }
+                hls = new Hls();
                 hls.loadSource(url);
                 hls.attachMedia(video);
                 hls.on(Hls.Events.MANIFEST_PARSED, function() {
                     video.play();
                 });
-            }
-            // Fallback für Safari (unterstützt HLS nativ)
-            else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+            } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
                 video.src = url;
                 video.addEventListener('loadedmetadata', function() {
                     video.play();
                 });
-            } else {
-                alert("Dein Browser unterstützt dieses Videoformat leider nicht.");
             }
         }
     </script>
